2006-06-16  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Add two new commands to
	ibrowse: "hideattr" (mapped to "h") hides the attribute under
	the cursor. "unhiderattrs" (mapped to "H") reveals all hidden
	attributes again. Remapped the help command to "?". Display
	keycodes in the range 0x01-0x1F as CTRL-xx. Add CTRL-a and CTRL-e
	as keys for the "home" and "end" commands.

2006-06-15  Ville Vainio  <vivainio@gmail.com>

	* iplib.py, hooks.py: Added new generate_prompt hook that can be
	used to create prompts dynamically, instead of the "old" way of
	assigning "magic" strings to prompt_in1 and prompt_in2. The old
	way still works (it's invoked by the default hook), of course.
	
	* Prompts.py: added generate_output_prompt hook for altering output
	prompt

	* Release.py: Changed version string to 0.7.3.svn.
	
2006-06-15  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Change _BrowserLevel.moveto() so that
	the call to fetch() always tries to fetch enough data for at least one
	full screen. This makes it possible to simply call moveto(0,0,True) in
	the constructor. Fix typos and removed the obsolete goto attribute.

2006-06-12  Ville Vainio  <vivainio@gmail.com>

	* ipy_profile_sh.py: applied Krisha Mohan Gundu's patch for
	allowing $variable interpolation within multiline statements,
	though so far only with "sh" profile for a testing period.
	The patch also enables splitting long commands with \ but it
	doesn't work properly yet.

2006-06-12  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py (_dodisplay): Display the length of the
	input history and the position of the cursor in the input history for
	the find, findbackwards and goto command.

2006-06-10  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Add a class _CommandInput that
	implements the basic functionality of browser commands that require