@@ -5,7 +5,12 @@
 	the cursor. "unhiderattrs" (mapped to "H") reveals all hidden
 	attributes again. Remapped the help command to "?". Display
 	keycodes in the range 0x01-0x1F as CTRL-xx. Add CTRL-a and CTRL-e
-	as keys for the "home" and "end" commands.
+	as keys for the "home" and "end" commands. Add three new commands
+	to the input mode for "find" and friends: "delend" (CTRL-K)
+	deletes to the end of line. "incsearchup" searches upwards in the
+	command history for an input that starts with the text before the cursor.
+	"incsearchdown" does the same downwards. Removed a bogus mapping of
+	the x key to "delete".
 
 2006-06-15  Ville Vainio  <vivainio@gmail.com>
 
